--- a/_toc.yml
+++ b/_toc.yml
@@ -2,7 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: index
+root: README
 
 parts:
   - caption: 'Introduction'
@@ -25,6 +25,6 @@ parts:
     chapters:
     - file: book/conclusion
 
-  - caption: 'References'
+  - caption: 'Appendices'
     chapters:
-    - file: book/references
+    - file: book/bibliography
