--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ launch_buttons:
 # Information about where the book exists on the web
 repository:
   url: https://github.com/cdrowley/CEG8719 # Online location of your book
-  path_to_book: book # Optional path to your book, relative to the repository root
+  # path_to_book: book # Optional path to your book, relative to the repository root
   branch: main # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
@@ -75,4 +75,4 @@ sphinx:
 
 # Add a bibtex file so that we can create citations
 bibtex_bibfiles:
-  - book/references.bib
+  - references.bib
