--- a/_toc.yml
+++ b/_toc.yml
@@ -10,7 +10,7 @@ parts:
       - file: book/introduction
       - file: book/data_sources
       - file: book/data_access
-      - file: book/data_use
+      - file: book/data_processing
       - file: book/discussion
       - file: book/references_
 
